<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/item_background">

    <ImageView
        android:id="@+id/imageviewArticleImage"
        android:layout_width="170dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/article_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textviewArticleTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageviewArticleImage"
        app:layout_constraintTop_toTopOf="@+id/imageviewArticleImage" />

    <TextView
        android:id="@+id/textviewArticleDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/open_sans_light"
        android:maxLines="7"
        android:text="@string/description"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/textviewArticleTitle"
        app:layout_constraintStart_toEndOf="@+id/imageviewArticleImage"
        app:layout_constraintTop_toBottomOf="@id/textviewArticleTitle" />

    <TextView
        android:id="@+id/textviewArticleSource"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/source"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/imageviewArticleImage"
        app:layout_constraintTop_toBottomOf="@+id/imageviewArticleImage" />

    <TextView
        android:id="@+id/textviewArticlePostDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/open_sans_light"
        android:gravity="end"
        android:text="@string/published_at"
        android:textAlignment="textEnd"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/textviewArticleSource"
        app:layout_constraintTop_toBottomOf="@id/textviewArticleSource" />

</androidx.constraintlayout.widget.ConstraintLayout>